Added some UI and logic. Refactored code.| #1251

--- a/FlowCrypt/src/main/res/layout/prv_key_item.xml
+++ b/FlowCrypt/src/main/res/layout/prv_key_item.xml
@@ -8,43 +8,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
-    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd">
+    android:paddingStart="@dimen/default_margin_content_small"
+    android:paddingEnd="@dimen/default_margin_content_small">
 
     <TextView
-        android:id="@+id/textViewEmail"
+        android:id="@+id/tVEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/default_margin_small"
         android:ellipsize="middle"
         android:maxLines="1"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
-        app:layout_constraintBottom_toTopOf="@+id/textViewFingerprint"
-        app:layout_constraintEnd_toStartOf="@+id/compoundButton"
+        app:layout_constraintBottom_toTopOf="@+id/tVFingerprint"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="flowcrypt@flowcrypt.com" />
 
     <TextView
-        android:id="@+id/textViewFingerprint"
+        android:id="@+id/tVFingerprint"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/default_margin_small"
-        android:ellipsize="middle"
         android:maxLines="1"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/compoundButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
-        tools:text="0x454545450A80F238598DD081C669001D0A454545" />
-
-    <RadioButton
-        android:id="@+id/compoundButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:textSize="@dimen/default_text_size_very_small"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tVEmail"
+        tools:text="4545 4545 0A80 F238 598D D081 C669 001D 0A45 4545" />
 
 </com.flowcrypt.email.ui.widget.CheckableConstrainLayout>
