--- a/FlowCrypt/src/main/res/layout/pub_key_adapter_item_checkbox.xml
+++ b/FlowCrypt/src/main/res/layout/pub_key_adapter_item_checkbox.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/default_margin_small"
         android:ellipsize="middle"
-        android:singleLine="true"
+        android:maxLines="1"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         app:layout_constraintBottom_toTopOf="@+id/textViewFingerprint"
         app:layout_constraintEnd_toStartOf="@+id/compoundButton"
@@ -30,13 +30,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/default_margin_small"
-        android:singleLine="true"
+        android:ellipsize="middle"
+        android:maxLines="1"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/compoundButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
-        tools:text="0xBDBD7660F6998DC4" />
+        tools:text="0x454545450A80F238598DD081C669001D0A454545" />
 
     <CheckBox
         android:id="@+id/compoundButton"
