--- a/FlowCrypt/src/main/res/layout/fragment_fix_empty_passphrase.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_fix_empty_passphrase.xml
@@ -2,123 +2,77 @@
   ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
   ~ Contributors: DenBond7
   -->
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingStart="@dimen/default_margin_content"
+    android:paddingTop="@dimen/default_margin_content"
+    android:paddingEnd="@dimen/default_margin_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <TextView
+        android:id="@+id/tVStatusMessage"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:text="@string/loading"
+        android:textAlignment="center"
+        android:textSize="@dimen/default_text_size_big" />
 
-        <TextView
-            android:id="@+id/tVStatusMessage"
-            android:layout_width="0dp"
+    <ProgressBar
+        android:id="@+id/pBLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/default_margin_content_small" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rVKeys"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/default_margin_content_small"
+        android:layout_weight="1"
+        android:visibility="gone"
+        tools:itemCount="3"
+        tools:listitem="@layout/prv_key_item" />
+
+    <ProgressBar
+        android:id="@+id/pBCheckPassphrase"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:indeterminateBehavior="repeat"
+        android:indeterminateOnly="true"
+        android:indeterminateTint="@color/colorPrimary"
+        android:visibility="invisible" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tILKeyPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/your_passphrase"
+        android:visibility="gone"
+        app:counterEnabled="false"
+        app:errorEnabled="false"
+        app:passwordToggleContentDescription="description"
+        app:passwordToggleEnabled="true">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/eTKeyPassword"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_margin_content"
-            android:paddingLeft="@dimen/default_margin_content_small"
-            android:paddingRight="@dimen/default_margin_content_small"
-            android:text="@string/loading"
-            android:textAlignment="center"
-            android:textSize="@dimen/default_text_size_big"
-            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
+            android:ems="10"
+            android:inputType="textPassword" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-        <ProgressBar
-            android:id="@+id/pBLoading"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_margin_content_small"
-            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/tVStatusMessage" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rVKeys"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_margin_content_small"
-            android:nestedScrollingEnabled="false"
-            android:overScrollMode="never"
-            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/pBLoading"
-            tools:itemCount="3"
-            tools:listitem="@layout/prv_key_item" />
-
-        <ProgressBar
-            android:id="@+id/pBCheckPassphrase"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:indeterminate="true"
-            android:indeterminateBehavior="repeat"
-            android:indeterminateOnly="true"
-            android:indeterminateTint="@color/colorPrimary"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/rVKeys" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tILKeyPassword"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/your_passphrase"
-            app:counterEnabled="false"
-            app:errorEnabled="false"
-            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/pBCheckPassphrase"
-            app:passwordToggleContentDescription="description"
-            app:passwordToggleEnabled="true">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/eTKeyPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPassword" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <Button
-            android:id="@+id/btnUpdatePassphrase"
-            style="@style/AppWidget.Button.Green"
-            android:layout_width="0dp"
-            android:layout_marginTop="@dimen/default_margin_content"
-            android:text="@string/check_passphrase"
-            android:textAllCaps="true"
-            android:theme="@style/AppWidget.Button.Green"
-            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/tILKeyPassword" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guidelineLeft"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="@dimen/default_margin_content" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guidelineRight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_end="@dimen/default_margin_content" />
-
-        <androidx.constraintlayout.widget.Group
-            android:id="@+id/gCheckPassphrase"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            app:constraint_referenced_ids="btnUpdatePassphrase,tILKeyPassword,rVKeys"
-            tools:visibility="visible" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+    <Button
+        android:id="@+id/btnUpdatePassphrase"
+        style="@style/AppWidget.Button.Green"
+        android:layout_width="match_parent"
+        android:text="@string/check_passphrase"
+        android:textAllCaps="true"
+        android:theme="@style/AppWidget.Button.Green"
+        android:visibility="gone" />
+</LinearLayout>
