--- a/FlowCrypt/src/main/res/layout/message_part_pgp_message_error.xml
+++ b/FlowCrypt/src/main/res/layout/message_part_pgp_message_error.xml
@@ -22,4 +22,15 @@
         tools:text="At nihil sequi quo maiores molestiae consequatur. Id aut nam voluptate doloribus saepe consequatur molestias. Eos sunt est ipsam accusantium saepe doloribus veritatis.
 
 Recusandae velit sit veniam asperiores nisi. Eius tempore ab voluptatum dolorum nihil qui beatae. Et cum au" />
+
+    <Button
+        android:id="@+id/btAction"
+        style="@style/AppWidget.Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/default_margin_content_small"
+        android:layout_marginBottom="@dimen/default_margin_content_small"
+        android:theme="@style/AppWidget.Button.Green"
+        android:visibility="gone"
+        tools:text="@string/have_not_any_other_key" />
 </LinearLayout>
