Added fragment realization for SearchBackupsInEmailActivity and BackupKeysActivity.| #1253

--- a/FlowCrypt/src/main/res/layout/backup_found.xml
+++ b/FlowCrypt/src/main/res/layout/backup_found.xml
@@ -21,7 +21,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/backups_found_message" />
+        tools:text="@string/backups_found" />
 
     <Button
         android:id="@+id/buttonSeeMoreBackupOptions"
