Added a logic to show FixNeedPassphraseIssueDialogFragment. Refactored code.| #1253

--- a/FlowCrypt/src/main/res/navigation/nav_graph.xml
+++ b/FlowCrypt/src/main/res/navigation/nav_graph.xml
@@ -169,11 +169,15 @@
     <dialog
         android:id="@+id/fixNeedPassphraseIssueDialogFragment"
         android:name="com.flowcrypt.email.ui.activity.fragment.dialog.FixNeedPassphraseIssueDialogFragment"
-        android:label="FixNeedPassphraseIssueDialogFragment">
+        android:label="FixNeedPassphraseIssueDialogFragment"
+        tools:layout="@layout/fragment_fix_empty_passphrase">
         <argument
             android:name="fingerprints"
             app:argType="string[]"
             app:nullable="true" />
+        <argument
+            android:name="logicType"
+            app:argType="com.flowcrypt.email.ui.activity.fragment.dialog.FixNeedPassphraseIssueDialogFragment$LogicType" />
     </dialog>
 
     <action
