--- a/FlowCrypt/src/main/res/navigation/nav_graph.xml
+++ b/FlowCrypt/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_mainSettingsFragment_to_serverSettingsFragment"
             app:destination="@id/serverSettingsFragment" />
+        <action
+            android:id="@+id/action_mainSettingsFragment_to_searchBackupsInEmailFragment"
+            app:destination="@id/searchBackupsInEmailFragment" />
     </fragment>
 
     <fragment
@@ -66,6 +69,24 @@
             app:nullable="true" />
     </fragment>
 
+    <fragment
+        android:id="@+id/searchBackupsInEmailFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.SearchBackupsInEmailFragment"
+        tools:layout="@layout/fragment_search_backups_in_email">
+        <action
+            android:id="@+id/action_searchBackupsInEmailFragment_to_backupKeysFragment"
+            app:destination="@id/backupKeysFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/backupKeysFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.BackupKeysFragment"
+        tools:layout="@layout/fragment_backup_keys">
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://make_backup" />
+    </fragment>
+
     <dialog
         android:id="@+id/twoWayDialogFragment"
         android:name="com.flowcrypt.email.ui.activity.fragment.dialog.TwoWayDialogFragment"
@@ -107,7 +128,69 @@
             android:defaultValue="false"
             app:argType="boolean" />
     </dialog>
+
+    <dialog
+        android:id="@+id/infoDialogFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.dialog.InfoDialogFragment"
+        android:label="InfoDialogFragment">
+        <argument
+            android:name="requestCode"
+            android:defaultValue="0"
+            app:argType="integer" />
+        <argument
+            android:name="dialogTitle"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="dialogMsg"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="buttonTitle"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="isCancelable"
+            android:defaultValue="true"
+            app:argType="boolean" />
+        <argument
+            android:name="useNavigationUp"
+            android:defaultValue="false"
+            app:argType="boolean" />
+        <argument
+            android:name="hasHtml"
+            android:defaultValue="false"
+            app:argType="boolean" />
+        <argument
+            android:name="useLinkify"
+            android:defaultValue="false"
+            app:argType="boolean" />
+    </dialog>
+
+    <dialog
+        android:id="@+id/fixNeedPassphraseIssueDialogFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.dialog.FixNeedPassphraseIssueDialogFragment"
+        android:label="FixNeedPassphraseIssueDialogFragment"
+        tools:layout="@layout/fragment_fix_empty_passphrase">
+        <argument
+            android:name="fingerprints"
+            app:argType="string[]"
+            app:nullable="true" />
+        <argument
+            android:name="logicType"
+            app:argType="com.flowcrypt.email.ui.activity.fragment.dialog.FixNeedPassphraseIssueDialogFragment$LogicType" />
+    </dialog>
+
     <action
         android:id="@+id/action_global_twoWayDialogFragment"
         app:destination="@id/twoWayDialogFragment" />
+    <action
+        android:id="@+id/action_global_infoDialogFragment"
+        app:destination="@id/infoDialogFragment" />
+    <action
+        android:id="@+id/action_global_fixNeedPassphraseIssueDialogFragment"
+        app:destination="@id/fixNeedPassphraseIssueDialogFragment" />
 </navigation>
