Added SecuritySettingsFragment to nav_graph.xml.| #1310

--- a/FlowCrypt/src/main/res/values/preferences.xml
+++ b/FlowCrypt/src/main/res/values/preferences.xml
@@ -4,7 +4,6 @@
   -->
 
 <resources>
-    <string name="preferences_key_settings_security">preferences_key_settings_security</string>
     <string name="preferences_key_messages_notification_filter">preferences_key_messages_notification_filter</string>
     <string name="preferences_key_manage_notifications">preferences_key_manage_notifications</string>
     <string name="preferences_key_security_change_pass_phrase">preferences_key_security_change_pass_phrase</string>
@@ -13,6 +12,7 @@
     <string name="pref_key_attester">pref_key_attester</string>
     <string name="pref_key_legal">pref_key_legal</string>
     <string name="pref_key_notification">pref_key_notification</string>
+    <string name="pref_key_security">pref_key_security</string>
 
     <string name="pref_title_allow_anonymous_crash_reports">Allow anonymous crash reports</string>
 </resources>
