--- a/FlowCrypt/src/main/res/navigation/nav_graph.xml
+++ b/FlowCrypt/src/main/res/navigation/nav_graph.xml
@@ -28,6 +28,18 @@
         <action
             android:id="@+id/action_mainSettingsFragment_to_notificationsSettingsFragment"
             app:destination="@id/notificationsSettingsFragment" />
+        <action
+            android:id="@+id/action_mainSettingsFragment_to_securitySettingsFragment"
+            app:destination="@id/securitySettingsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/securitySettingsFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.preferences.SecuritySettingsFragment"
+        android:label="SecuritySettingsFragment">
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/security" />
     </fragment>
 
     <fragment
